--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<head><meta name="google-site-verification" content="H7iWiVZtN0QrQ5M7FAWaTo6exOBE0YiQmm2Auv0WnBE" /></head>
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
